# Proyecto1_CraztBreakout

./: CMakeLists.txt  main.cpp
Doxygen/html/: annotated.html  classes.html  classserver-members.html  classserver.html  dir_b40a92f8f7280d77bde6c7b75351a697.html  dir_fb94797685bc3151998c4841b4fb400c.html  files.html  functions.html  functions_func.html  server_8h_source.html  struct_data_socket-members.html  struct_data_socket.html
Doxygen/html/search/: all_3.js  all_5.js  all_6.js  classes_0.js  functions_0.js  functions_1.js  functions_3.js  functions_5.js  searchdata.js
Doxygen/latex/: annotated.tex  classserver.tex  files.tex  refman.tex  server_8h_source.tex  struct_data_socket.tex
Server/: server.cpp  server.h
Server/Comunicaciones/: Msgcreator.cpp  Msgcreator.h  Socketserver.cpp  Socketserver.h
Server/LogisiticaBloques/: Bloque.cpp  Bloque.h  BloqueComun.cpp  BloqueComun.h  BloqueDoble.cpp  BloqueDoble.h  BloqueInterno.cpp  BloqueInterno.h  BloqueProfundo.cpp  BloqueProfundo.h  BloqueTriple.cpp  BloqueTriple.h  Bloques.cpp  Bloques.h
interfaz/: Bloqueg.cpp  Bloqueg.h  sfml-app  ventana.cpp  ventana.h
